chore(SHS-6419): update max-width to avoid long captions overlaping with text box in banner images

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.carousel.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_pattern.carousel.scss
@@ -132,7 +132,7 @@
             @include grid-media-min('md') {
               right: 0;
               width: auto;
-              max-width: 50%;
+              max-width: 40%;
             }
           }
         }
